Fix typescript props type issue, remove duplicate custom tokens, add native token balance validation

--- a/lib/locales/en.json
+++ b/lib/locales/en.json
@@ -14,5 +14,7 @@
   "SYMBOL": "Symbol",
   "PRECISION": "Precision",
   "DECIMALS": "Decimals",
-  "ADD": "Add"
+  "ADD": "Add",
+  "UNKNOWN_CHAIN": "Unknown chain",
+  "AMOUNT_EXCEEDS_BALANCE": "Amount exceeds balance"
 }
